--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <title>R3F</title>
   </head>
-  <body>
+
+  <body style="background: #030014; overflow-y: scroll; overflow-x: hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
